# media-report-cli

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  seed.md
docs/: release.md
docs/context/: architecture_context.md  distribution_context.md  llm_context.md  product_context.md  roadmap.md  technical_context.md  testing_context.md  workflow_context.md
skills/cli-design/: SKILL.md
skills/hexagonal-architecture/: SKILL.md
skills/llm-provider/: SKILL.md
skills/media-processing/: SKILL.md
skills/pdf-generation/: SKILL.md
skills/project-planning/: SKILL.md
skills/pypi-packaging/: SKILL.md
skills/release-packaging/: SKILL.md
skills/report-template-design/: SKILL.md
skills/testing-strategy/: SKILL.md
skills/transcription-provider/: SKILL.md
src/media_report/: __init__.py
src/media_report/application/process_media/: __init__.py  models.py  service.py
src/media_report/cli/: __init__.py  app.py
src/media_report/cli/commands/: config.py  doctor.py  process.py  templates.py
src/media_report/core/: __init__.py  constants.py  errors.py  resources.py  settings.py
src/media_report/domain/artifacts/: __init__.py  entities.py  service.py
src/media_report/domain/media/: __init__.py  entities.py  ports.py
src/media_report/domain/reporting/: __init__.py  ports.py
src/media_report/domain/transcription/: __init__.py  ports.py
src/media_report/infrastructure/document/: __init__.py  pandoc_service.py
src/media_report/infrastructure/ffmpeg/: __init__.py  service.py
src/media_report/infrastructure/filesystem/: scanner.py
src/media_report/infrastructure/llm/: __init__.py  ollama_provider.py  openai_compatible_provider.py
src/media_report/infrastructure/resources/: __init__.py  templates.py
src/media_report/infrastructure/transcription/: __init__.py  faster_whisper_provider.py
src/media_report/templates/: __init__.py
src/media_report/templates/pdf/: __init__.py  default.tex
src/media_report/templates/prompts/: __init__.py  class_notes.md  generic.md  interview.md  meeting.md  technical_report.md
tests/integration/: test_cli.py
tests/unit/: test_artifact_planner.py  test_command_builders.py  test_resources.py  test_scanner.py  test_settings.py
