[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "media-report-cli"
version = "0.1.0"
description = "CLI to turn local audio or video files into structured Markdown and PDF reports."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "smaje" },
]
keywords = ["cli", "media", "transcription", "reporting", "whisper", "ollama"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "rich>=13.7,<15",
  "tomli-w>=1.0,<2",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
transcription = [
  "faster-whisper>=1.1,<2",
]
dev = [
  "build>=1.2,<2",
  "pipx>=1.7,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.6,<1",
  "twine>=6,<7",
  "ty>=0.0.1a11",
]
all = [
  "faster-whisper>=1.1,<2",
]

[project.urls]
Homepage = "https://github.com/smaje/media-report-cli"
Repository = "https://github.com/smaje/media-report-cli"
Issues = "https://github.com/smaje/media-report-cli/issues"
Documentation = "https://github.com/smaje/media-report-cli/tree/main/docs"
Changelog = "https://github.com/smaje/media-report-cli/blob/main/CHANGELOG.md"

[project.scripts]
media-report = "media_report.cli.app:main"

[tool.hatch.build]
include = [
  "/src/media_report/templates/**/*.md",
  "/src/media_report/templates/**/*.tex",
  "/docs/**/*.md",
  "/skills/**/*.md",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/media_report"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ty]
src = ["src", "tests"]
